--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Saúl Pérez – iOS Engineer</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <link href="https://cdn.jsdelivr.net/npm/lightbox2@2.11.4/dist/css/lightbox.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/lightbox2@2.11.4/dist/js/lightbox.min.js"></script>
 </head>
 <body class="bg-gray-50 text-gray-800 font-sans leading-relaxed">
 
@@ -31,7 +33,7 @@
     </p>
     <p class="mt-4 text-gray-500">📍 Guadalajara, Jalisco, México</p>
     <p class="mt-2">📞 +52 33 4603 0750 | ✉️ <a class="text-blue-600" href="mailto:saul.riot@gmail.com">saul.riot@gmail.com</a></p>
-    <a href="https://www.linkedin.com/in/tu-perfil" target="_blank" class="inline-block mt-6 bg-blue-600 text-white px-6 py-2 rounded-lg shadow hover:bg-blue-700">LinkedIn</a>
+    <a href="www.linkedin.com/in/saul-perez-226630218" target="_blank" class="inline-block mt-4 bg-blue-600 text-white px-6 py-1 rounded-lg shadow hover:bg-blue-700">LinkedIn</a>
   </section>
 
   <!-- Summary -->
@@ -122,7 +124,7 @@
       <div class="grid md:grid-cols-2 gap-6">
         <!-- Project Card -->
         <div class="bg-white rounded-xl shadow-md overflow-hidden">
-          <img src="assets/pokedex.png" alt="Pokedex Screenshot" class="w-full h-48 object-cover">
+          <img src="assets/images/pokedex1.png" alt="Pokedex Screenshot" class="w-full h-48 object-cover">
           <div class="p-4">
             <h4 class="font-semibold text-lg">🐿️ Pokedex</h4>
             <p class="text-sm text-gray-600">App that consumes PokeAPI for Pokémon data. Search by name, type or effect.</p>
@@ -134,25 +136,54 @@
 
         <!-- Another Project Card -->
         <div class="bg-white rounded-xl shadow-md overflow-hidden">
-          <img src="assets/getusers.png" alt="Get Random Users" class="w-full h-48 object-cover">
+          <img src="assets/images/rdm-users.png" alt="Get Random Users" class="w-full h-48 object-cover">
           <div class="p-4">
             <h4 class="font-semibold text-lg">👤 Get Random Users</h4>
             <p class="text-sm text-gray-600">Fetches random user profiles from RandomUser API.</p>
             <p class="text-sm mt-2"><b>Stack:</b> UIKit, URLSession, MVC</p>
-            <a href="https://github.com/paraleloss/GetRdmUsers" target="_blank" class="text-blue-600 text-sm">Repo</a> | 
-            <a href="https://youtube.com/shorts/ORN6J3k7nks" target="_blank" class="text-blue-600 text-sm">Demo</a>
+            <a href="https://github.com/paraleloss/GetRdmUsers" target="_blank" class="text-blue-600 text-sm">Repo</a> 
+            <a href="https://youtube.com/shorts/tq3wYEUNss8?feature=share" target="_blank" class="text-blue-600 text-sm">Demo</a>
           </div>
         </div>
 
-                <!-- Another Project Card -->
+      <!-- Maya Project Card -->
+      <div class="bg-white rounded-xl shadow-md overflow-hidden">
+        <div class="p-4">
+          <h4 class="font-semibold text-lg">📲 Maya Mobile</h4>
+          <p class="text-sm text-gray-600 mt-1">
+            App for Phone carrier to make recharges, request amounts, see balance, pay services:
+          </p>
+          <p class="text-sm mt-2"><b>Stack:</b> SwiftUI, URLSession, MVVM, Async, await.</p>
+          <p class="text-sm mt-2"><b>Rol:</b> Full Development of Mobile Native SwiftUI + Services Consumption.</p>
+      
+          <!-- Gallery Grid -->
+          <div class="grid grid-cols-2 md:grid-cols-4 gap-2 mt-4">
+            <a href="assets/images/maya1.jpg" data-lightbox="maya" data-title="Screenshot 1">
+              <img src="assets/images/maya1.jpg" class="w-full object-cover rounded hover:scale-105 transition-transform">
+            </a>
+            <a href="assets/images/maya1.jpg" data-lightbox="maya" data-title="Screenshot 2">
+              <img src="assets/images/maya1.jpg" class="w-full object-cover rounded hover:scale-105 transition-transform">
+            </a>
+            <a href="assets/images/maya3.jpg" data-lightbox="maya" data-title="Screenshot 3">
+              <img src="assets/images/maya3.jpg" class="w-full object-cover rounded hover:scale-105 transition-transform">
+            </a>
+            <a href="assets/images/maya4.jpg" data-lightbox="maya" data-title="Screenshot 4">
+              <img src="assets/images/maya4.jpg" class="w-full object-cover rounded hover:scale-105 transition-transform">
+            </a>
+          </div>
+        </div>
+      </div>
+
+
+                        <!-- Another Project Card -->
         <div class="bg-white rounded-xl shadow-md overflow-hidden">
-          <img src="assets/getusers.png" alt="Get Random Users" class="w-full h-48 object-cover">
+          <img src="coppel1.jpg" alt="Get Random Users" class="w-full h-48 object-cover">
           <div class="p-4">
-            <h4 class="font-semibold text-lg">📲 Maya Mobile</h4>
-            <p class="text-sm text-gray-600">App for Phone carrier to make recharges, request amounts, see balance, pay services:</p>
-            <p class="text-sm mt-2"><b>Stack:</b> SwiftUI, URLSession, MVVM, Async, await.</p>
-            <p class="text-sm mt-2"><b>Rol:</b>Full Development of Mobile Native SwiftUI + Services Consumption.</p> 
-            <a href="https://youtube.com/shorts/ORN6J3k7nks" target="_blank" class="text-blue-600 text-sm">Demo</a>
+            <h4 class="font-semibold text-lg">💵 Payment agreements</h4>
+            <p class="text-sm text-gray-600">Complete screen flows and implemented service consumption for multiple modules:</p>
+            <p class="text-sm mt-2"><b>Stack:</b>UIKit, URLSession, SwiftLint MVVM, Async, Clean Swift VIP, FireBase.</p>
+            <p class="text-sm mt-2"><b>Rol:</b>FFull Development of Mobile Native UIKit + Services Consumption.</p> 
+            <a href="https://www.youtube.com/shorts/5aqKzYYmR6Is" target="_blank" class="text-blue-600 text-sm">Demo</a>
           </div>
         </div>
         
@@ -165,12 +196,12 @@
     <h3 class="text-2xl font-bold mb-4">📬 Contact</h3>
     <p>Interested in working together? Let's connect!</p>
     <p class="mt-4">✉️ <a href="mailto:saul.riot@gmail.com" class="text-blue-600">saul.riot@gmail.com</a></p>
-    <p>💼 <a href="https://www.linkedin.com/in/tu-perfil" target="_blank" class="text-blue-600">LinkedIn</a></p>
+    <p>💼 <a href="www.linkedin.com/in/saul-perez-226630218" target="_blank" class="text-blue-600">LinkedIn</a></p>
   </section>
 
   <!-- Footer -->
   <footer class="bg-gray-800 text-gray-400 text-center py-4">
-    © 2025 Saúl Pérez – Built with ❤️ using GitHub Pages + TailwindCSS
+    © 2025 Saúl Pérez
   </footer>
 
 </body>
