--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
         <!-- Project Card -->
         <div class="bg-white rounded-xl shadow-md overflow-hidden">
           <img src="assets/images/pokedex1.png" alt="Pokedex Screenshot" class="w-full h-48 object-cover">
+          <br>
           <div class="p-4">
             <h4 class="font-semibold text-lg">🐿️ Pokedex</h4>
             <p class="text-sm text-gray-600">App that consumes PokeAPI for Pokémon data. Search by name, type or effect.</p>
@@ -137,11 +138,12 @@
         <!-- Another Project Card -->
         <div class="bg-white rounded-xl shadow-md overflow-hidden">
           <img src="assets/images/rdm-users.png" alt="Get Random Users" class="w-full h-48 object-cover">
+          <br>
           <div class="p-4">
             <h4 class="font-semibold text-lg">👤 Get Random Users</h4>
             <p class="text-sm text-gray-600">Fetches random user profiles from RandomUser API.</p>
             <p class="text-sm mt-2"><b>Stack:</b> UIKit, URLSession, MVC</p>
-            <a href="https://github.com/paraleloss/GetRdmUsers" target="_blank" class="text-blue-600 text-sm">Repo</a> 
+            <a href="https://github.com/paraleloss/GetRdmUsers" target="_blank" class="text-blue-600 text-sm">Repo</a> | 
             <a href="https://youtube.com/shorts/tq3wYEUNss8?feature=share" target="_blank" class="text-blue-600 text-sm">Demo</a>
           </div>
         </div>
@@ -155,11 +157,11 @@
           </p>
           <p class="text-sm mt-2"><b>Stack:</b> SwiftUI, URLSession, MVVM, Async, await.</p>
           <p class="text-sm mt-2"><b>Rol:</b> Full Development of Mobile Native SwiftUI + Services Consumption.</p>
-      
+      <br>
           <!-- Gallery Grid -->
           <div class="grid grid-cols-2 md:grid-cols-4 gap-2 mt-4">
-            <a href="assets/images/maya1.jpg" data-lightbox="maya" data-title="Screenshot 1">
-              <img src="assets/images/maya1.jpg" class="w-full object-cover rounded hover:scale-105 transition-transform">
+            <a href="assets/images/maya2.jpg" data-lightbox="maya" data-title="Screenshot 1">
+              <img src="assets/images/maya2.jpg" class="w-full object-cover rounded hover:scale-105 transition-transform">
             </a>
             <a href="assets/images/maya1.jpg" data-lightbox="maya" data-title="Screenshot 2">
               <img src="assets/images/maya1.jpg" class="w-full object-cover rounded hover:scale-105 transition-transform">
@@ -177,8 +179,9 @@
 
                         <!-- Another Project Card -->
         <div class="bg-white rounded-xl shadow-md overflow-hidden">
-          <img src="coppel1.jpg" alt="Get Random Users" class="w-full h-48 object-cover">
+          <img src="agreements.png" alt="ios Dev" class="w-full h-48 object-cover">
           <div class="p-4">
+            <br>
             <h4 class="font-semibold text-lg">💵 Payment agreements</h4>
             <p class="text-sm text-gray-600">Complete screen flows and implemented service consumption for multiple modules:</p>
             <p class="text-sm mt-2"><b>Stack:</b>UIKit, URLSession, SwiftLint MVVM, Async, Clean Swift VIP, FireBase.</p>
