--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
             <p class="text-sm text-gray-600">Fetches random user profiles from RandomUser API.</p>
             <p class="text-sm mt-2"><b>Stack:</b> UIKit, URLSession, MVC</p>
             <a href="https://github.com/paraleloss/GetRdmUsers" target="_blank" class="text-blue-600 text-sm">Repo</a> | 
-            <a href="https://youtube.com/shorts/tq3wYEUNss8?feature=share" target="_blank" class="text-blue-600 text-sm">Demo</a>
+            <a href="https://youtube.com/shorts/tq3wYEUNss8?si=2DBJAE9UlJKZl0lw" target="_blank" class="text-blue-600 text-sm">Demo</a>
           </div>
         </div>
 
@@ -186,7 +186,7 @@
             <p class="text-sm text-gray-600">Complete screen flows and implemented service consumption for multiple modules:</p>
             <p class="text-sm mt-2"><b>Stack:</b>UIKit, URLSession, SwiftLint MVVM, Async, Clean Swift VIP, FireBase.</p>
             <p class="text-sm mt-2"><b>Rol:</b>FFull Development of Mobile Native UIKit + Services Consumption.</p> 
-            <a href="https://www.youtube.com/shorts/5aqKzYYmR6Is" target="_blank" class="text-blue-600 text-sm">Demo</a>
+            <a href="https://youtube.com/shorts/5aqKzYYmR6I?si=8jjBzgaRnWWAs2gt" target="_blank" class="text-blue-600 text-sm">Demo</a>
           </div>
         </div>
         
